--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,76 @@
-blinker==1.4
+absl-py==2.1.0
+annotated-types==0.7.0
+anyio==4.4.0
+astunparse==1.6.3
+cachetools==5.3.3
 certifi==2024.6.2
-command-not-found==0.3
-cryptography==3.4.8
-dbus-python==1.2.18
-distlib==0.3.8
-distro==1.7.0
-distro-info==1.1+ubuntu0.1
-filelock==3.14.0
-httplib2==0.20.2
-importlib-metadata==4.6.4
-jeepney==0.7.1
-keyring==23.5.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-more-itertools==8.10.0
-netifaces==0.11.0
-oauthlib==3.2.0
-pipenv==2023.12.1
-platformdirs==4.2.2
-PyGObject==3.42.1
-PyJWT==2.3.0
-pyparsing==2.4.7
-python-apt==2.4.0+ubuntu2
-PyYAML==5.4.1
-SecretStorage==3.3.1
+charset-normalizer==3.3.2
+click==8.1.7
+dnspython==2.6.1
+email_validator==2.1.1
+exceptiongroup==1.2.1
+fastapi==0.111.0
+fastapi-cli==0.0.4
+flatbuffers==24.3.25
+gast==0.5.4
+google-auth==2.29.0
+google-auth-oauthlib==1.2.0
+google-pasta==0.2.0
+grpcio==1.64.0
+h11==0.14.0
+h5py==3.11.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+idna==3.7
+Jinja2==3.1.4
+keras==2.15.0
+libclang==18.1.1
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+ml-dtypes==0.2.0
+namex==0.0.8
+numpy==1.26.4
+oauthlib==3.2.2
+opt-einsum==3.3.0
+optree==0.11.0
+orjson==3.10.3
+packaging==24.0
+pillow==10.3.0
+protobuf==4.25.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pydantic==2.7.2
+pydantic_core==2.18.3
+Pygments==2.18.0
+python-dotenv==1.0.1
+python-multipart==0.0.9
+PyYAML==6.0.1
+requests==2.32.3
+requests-oauthlib==2.0.0
+rich==13.7.1
+rsa==4.9
+shellingham==1.5.4
 six==1.16.0
-systemd-python==234
-ubuntu-advantage-tools==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-virtualenv==20.26.2
-wadllib==1.3.6
-zipp==1.0.0
+sniffio==1.3.1
+starlette==0.37.2
+tensorboard==2.15.2
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-hub==0.16.1
+tensorflow-io-gcs-filesystem==0.37.0
+termcolor==2.4.0
+tf_keras==2.16.0
+typer==0.12.3
+typing_extensions==4.12.1
+ujson==5.10.0
+urllib3==2.2.1
+uvicorn==0.30.1
+uvloop==0.19.0
+watchfiles==0.22.0
+websockets==12.0
+Werkzeug==3.0.3
+wrapt==1.14.1
