--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/Pipfile
-/Untitled0.ipynb
-models/
-__pycache__/
-.vscode/
+/app/Pipfile
+/app/Untitled0.ipynb
+/app/models/
+/app/__pycache__/
+/app/.vscode/
