--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ email_validator==2.1.1
 exceptiongroup==1.2.1
 fastapi==0.111.0
 fastapi-cli==0.0.4
+filelock==3.15.1
 flatbuffers==24.3.25
+fsspec==2024.6.0
 gast==0.5.4
 google-auth==2.29.0
 google-auth-oauthlib==1.2.0
@@ -22,17 +24,32 @@ h5py==3.11.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
+huggingface-hub==0.23.4
 idna==3.7
 Jinja2==3.1.4
-keras==2.15.0
+keras
 libclang==18.1.1
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
-ml-dtypes==0.2.0
+ml-dtypes
+mpmath==1.3.0
 namex==0.0.8
+networkx==3.2
 numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.5.40
+nvidia-nvtx-cu12==12.1.105
 oauthlib==3.2.2
 opt-einsum==3.3.0
 optree==0.11.0
@@ -48,22 +65,31 @@ Pygments==2.18.0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
+regex==2024.5.15
 requests==2.32.3
 requests-oauthlib==2.0.0
 rich==13.7.1
 rsa==4.9
+safetensors==0.4.3
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 starlette==0.37.2
-tensorboard==2.15.2
-tensorboard-data-server==0.7.2
-tensorflow==2.15.0
+sympy==1.12.1
+tensorboard
+tensorboard-data-server
+tensorflow
 tensorflow-estimator==2.15.0
 tensorflow-hub==0.16.1
 tensorflow-io-gcs-filesystem==0.37.0
 termcolor==2.4.0
 tf_keras==2.16.0
+tokenizers==0.19.1
+torch==2.3.1
+torchvision==0.18.1
+tqdm==4.66.4
+transformers==4.41.2
+triton==2.3.1
 typer==0.12.3
 typing_extensions==4.12.1
 ujson==5.10.0
